--- a/SimpleNewsWebsite/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SimpleNewsWebsite/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                                             <li class="nav-item">
                                                 <a class="nav-link"
                                                    asp-controller="Post"
-                                                   asp-action="EditPost">&nbsp; &nbsp;&nbsp;&nbsp;DS Bài viết</a>
+                                                   asp-action="EditPost">&nbsp; &nbsp;&nbsp;&nbsp;Thêm bài viết</a>
                                             </li>
                                         </ul>
                                     </div>
