--- a/SimpleNewsWebsite/Views/Home/Index.cshtml
+++ b/SimpleNewsWebsite/Views/Home/Index.cshtml
@@ -36,18 +36,26 @@
     <div class="row align-items-start">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="~/img/h1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Tiêu đề tin tức 1</h5>
-                </div>
+                <a asp-controller="Post"
+                   asp-action="Detail"
+                   asp-route-id="1">
+                    <img src="~/img/h1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tiêu đề tin tức 1</h5>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="~/img/h2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Tiêu đề tin tức 2</h5>
-                </div>
+                <a asp-controller="Post"
+                   asp-action="Detail"
+                   asp-route-id="2">
+                    <img src="~/img/h2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Tiêu đề tin tức 2</h5>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="col">
