--- a/SimpleNewsWebsite/wwwroot/css/layout.css
+++ b/SimpleNewsWebsite/wwwroot/css/layout.css
@@ -16,6 +16,10 @@ footer {
     text-align: center;
 }
 
+h5 {
+    text-decoration: none !important;
+}
+
 .bg-light {
     background-color: lightskyblue !important;
 }
