--- a/SimpleNewsWebsite/Views/Post/Detail.cshtml
+++ b/SimpleNewsWebsite/Views/Post/Detail.cshtml
@@ -7,10 +7,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 col-sm-12 bg-danger">
-            <img src="~/img/h1.jpg" alt="Alternate Text" style="text-align: center" />
+            <img src="@Url.Content(String.Format("{0}", ViewData["link"]))" alt="Alternate Text" style="text-align: center" />
             <br /><br /><br />
             <p>
-                Nội dung tin tức
+                Nội dung tin tức của post có id là @ViewData["link"]
             </p>
         </div>
         <div class="col-md-4 col-sm-12 bg-info justify-content-center">
