--- a/SimpleNewsWebsite/wwwroot/admin/css/category.css
+++ b/SimpleNewsWebsite/wwwroot/admin/css/category.css
@@ -1,2 +1,18 @@
 ﻿body {
 }
+
+input {
+    vertical-align: middle;
+}
+
+    input[type=text] {
+        padding: 5px;
+    }
+
+#hienThi {
+    vertical-align: middle;
+}
+
+input[type=checkbox] {
+    vertical-align: middle;
+}
