--- a/SimpleNewsWebsite/wwwroot/admin/css/listpost.css
+++ b/SimpleNewsWebsite/wwwroot/admin/css/listpost.css
@@ -4,3 +4,11 @@
 input {
     vertical-align: middle;
 }
+
+    input[type=text] {
+        vertical-align: middle;
+    }
+
+select, button {
+    vertical-align: middle;
+}
