--- a/SimpleNewsWebsite/Areas/Admin/Views/Home/Login.cshtml
+++ b/SimpleNewsWebsite/Areas/Admin/Views/Home/Login.cshtml
@@ -13,15 +13,25 @@
     <br /><br /><br />
     Tên: @ViewData["usernamepassword"]
     <br /><br /><br />
-    <form asp-controller="Home" asp-action="Login" method="post">
-        <div class="mb-3">
-            <label for="exampleInputUsername" class="form-label">Username</label>
-            <input name="username" type="text" class="form-control" id="username" placeholder="Nhập username">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword" class="form-label">Password</label>
-            <input name="password" type="password" class="form-control" id="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Đăng nhập</button>
-    </form>
+    <div id="formlogin">
+        <form asp-controller="Home" asp-action="Login" method="post">
+            <div class="mb-3">
+                <label for="exampleInputUsername" class="form-label">Username</label>
+                <input name="username" type="text" class="form-control" id="username" placeholder="Nhập username">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword" class="form-label">Password</label>
+                <input name="password" type="password" class="form-control" id="password">
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary">Đăng nhập</button>
+            </div>
+        </form>
+    </div>
+
 </div>
+
+
+@section CSS{
+    <link href="~/admin/css/login.css" rel="stylesheet" />
+}
