--- a/SimpleNewsWebsite/wwwroot/css/detail.css
+++ b/SimpleNewsWebsite/wwwroot/css/detail.css
@@ -1,2 +1,14 @@
-﻿body {
+﻿#left {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.my-image {
+    width: 100%;
+}
+
+#right {
+    border-left: 1px solid black;
+    padding-left: 0;
+    padding-right: 0;
 }
