--- a/SimpleNewsWebsite/Areas/Admin/Views/Home/Dashboard.cshtml
+++ b/SimpleNewsWebsite/Areas/Admin/Views/Home/Dashboard.cshtml
@@ -9,7 +9,7 @@
 
 <div>
     <p>
-        Trang dashboard nè
+        Trang dashboard sau khi login nè: @ViewData["usernamepassword"]
     </p>
     <section class="fluid-container d-flex justify-content-between mb-4 mt-4">
         <div class="myBox">100 danh mục</div>
