--- a/SimpleNewsWebsite/Areas/Admin/Views/Post/ListPosts.cshtml
+++ b/SimpleNewsWebsite/Areas/Admin/Views/Post/ListPosts.cshtml
@@ -10,7 +10,7 @@
 
 <div>
     <p>
-        Trang listpost nè
+        Trang listpost nè @ViewData["usernamepassword"]
     </p>
     <form asp-controller="Post" asp-action="ListPosts" method="post">
         <div class="mb-4">
