test ex03 & main

--- a/SimpleNewsWebsite/Views/Home/Index.cshtml
+++ b/SimpleNewsWebsite/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
             </div>*@
     </div>
     <br /><br />
-    <button id="btn" type="button">Test API</button>
+    <button id="btn" type="button">Click EX03</button>
 
     @section CSS{
         <link href="~/css/index.css" rel="stylesheet" />
